stop the subtitle breaking onto new line when displayed on iphone

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -4,7 +4,7 @@
 @import "_typography.scss";
 
 $pad-header-min: 65px !default;
-$pad-header-narrow: 65px !default;
+$pad-header-narrow: 60px !default;
 $pad-header-medium: 75px !default;
 $pad-header-wide: 75px !default;
 
